[package]
name = "bang_notation"
version = "1.0.0"
edition = "2021"

[lib]
name = "bang_notation"
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.75"
quote = "1.0.35"
syn = {version = "2.0.48", features = ["full", "visit-mut"]}
