[package]
name = "bang_notation"
version = "1.0.0"
edition = "2021"
authors = ["Aleksei Volkov"]
description = "!-notation for Rust"
readme = "README.md"
repository = "https://github.com/AlgebraicWolf/rust-bang-notation"
license = "Apache-2.0"
keywords = ["monads", "functional"]
exclude = [".github"]

[lib]
name = "bang_notation"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.75"
quote = "1.0.35"
syn = {version = "2.0.48", features = ["full", "visit-mut"]}
